--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
+      border-color: #ba707f;
     }
     
     /* Add a gray background color and some padding to the footer */
@@ -24,4 +25,4 @@
       display: none; 
     }
   }
-  </style>
+</style>
