--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     .navbar {
       margin-bottom: 0;
       border-radius: 0;
-      border-color: #ba707f;
+      background-color: #ba707f;
     }
     
     /* Add a gray background color and some padding to the footer */
