--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 <!-- css for homepage -->
 <style>
+    body {
+      font: 20px Raleway, sans-serif;
+      line-height: 1.8;
+      color: #f5f6f7;
+    }
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
       margin-bottom: 0;
